Changes in 3.4
========================================
* an ftp filesystem for the vfs (vfs.ftpfs).
* a very simple xhtml generation library (ecs, named
  after Apache's similarly named Java library).
* a library for processing and managing html forms (formlib).
* an xmlrpc support module (xmlrpchandler).
* support for scoping on server port (SERVER_PORT).
* fixes for PyDO and swcgi.
* <:url:> now has an "abs" option which will generate
  absolute urls.
* rewrite hook changed by default (revisit this!!).

Changes in 3.3 
======================================== 
* Developer's manual updated
* fix to PyDO/mysql so that you can put NULL values into columns
* minor change to handling of python code files (__name__ is now set
  to '__main__' in the document namespace), so precompiled Cheetah
  templates work.
---3.3 beta 0 cut
* the build process was revised to facilitate changing the installed
  directory structure using standard configure options; FHS-compliant
  packaging and installation is now feasible.
* PSP support added.  For now should be considered alpha
* Prebuilt documentation is now included in the distribution (HTML and
  paper-formats in letter dimensions)
* now can have skunkweb started as root (can set who you actually want
  it to run as) so you can bind to low ports
* new extcgi service so you can run CGI's from SkunkWeb!
* new pycgi service for running Python CGI's in process -- still in
  alpha.
* vfs.FS has new method, split_extra(), that finds extra path info;
  the rewrite service has a new DynamicRewriter subclass,
  ExtraPathFinder, which takes advantage of it (although a simple
  rewrite rule is still more efficient to use when possible -- see the
  FAQ).
* fixed userModuleCleanup bugs when using MySQL service and/or used
  <:img:> tag with PIL installed.
* pydo/mysql now supports connection caching using the mysql service.
* PyDO documentation updates
* The userdir service will now function properly when operating with a
  scoped docroot